# sinabis_labelkit

./: .env.example  README.md  app.py  pyproject.toml
scripts/: delete_all_documents.py
src/: actions.py  caching.py  config.py  utils.py
src/connectors/: __init__.py  case_store.py  document_store.py  mongo_store.py  postgres_store.py  store_factory.py
src/ui/: __init__.py  custom_items.py  data_classes.py  data_loading.py  dialogs.py  labeling_widget.py  page_arrangement.py
tests/: conftest.py  helpers.py  test_action_conflicts.py  test_action_queue.py  test_backends.py
